# spectra

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: architecture.md
examples/: demo_pipeline.py
src/spectra/: __init__.py  __main__.py  config.py  models.py  orchestrator.py
src/spectra/agents/: __init__.py  analyst.py  executor.py  scout.py
src/spectra/tools/: __init__.py  dexscreener.py  llm.py  onchain.py
tests/: test_analyst.py  test_orchestrator.py  test_scout.py
